Update css to fix lines cutoff for checklist

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,6 +49,7 @@ img {
     background-repeat: no-repeat;
     background-position: left;
     padding-left: 50px;
+    padding-right: 25px;
     margin-bottom: 1em;
     font-size: 24px;
 }
